src/objects/FieloAlpha__ProgramLayout__c.object
<CustomObject>
    <description>Graphic layouts for your members’ portal.</description>
    <fields>
        <fullName>FieloAlpha__BackgroundAttribute__c</fullName>
        <label>Background attribute</label>
        <picklist>
            <picklistValues>
                <fullName>No-repeat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__BackgroundId__c</fullName>
        <label>BackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__BodyBackgroundAttribute__c</fullName>
        <label>Body Background Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>No-repeat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__BodyBackgroundId__c</fullName>
        <label>Body Background Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__CSS__c</fullName>
        <label>CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Color01__c</fullName>
        <label>Color01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Color02__c</fullName>
        <label>Color02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Color03__c</fullName>
        <label>Color03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ColorFont01__c</fullName>
        <label>ColorFont01</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ColorFont02__c</fullName>
        <label>ColorFont02</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ColorFont03__c</fullName>
        <label>ColorFont03</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Font__c</fullName>
        <label>Font</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FooterBackgroundAttribute__c</fullName>
        <label>Footer Background Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>No-repeat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__FooterBackgroundId__c</fullName>
        <label>Footer Background Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Footer__c</fullName>
        <label>Footer</label>
        <picklist>
            <picklistValues>
                <fullName>fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fullsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pagesize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__HTMLHeadLayout__c</fullName>
        <label>HTML head layout</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__HeaderBackgroundAttribute__c</fullName>
        <label>Header Background Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>No-repeat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat-y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Header__c</fullName>
        <label>Header</label>
        <picklist>
            <picklistValues>
                <fullName>fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fullsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pagesize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Home__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home</label>
        <referenceTo>FieloAlpha__Menu__c</referenceTo>
        <relationshipLabel>Program Layouts (Home)</relationshipLabel>
        <relationshipName>ProgramLayoutsOR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Logo__c</fullName>
        <label>Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Menu__c</fullName>
        <label>Menu</label>
        <picklist>
            <picklistValues>
                <fullName>pills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tabs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nav</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipName>ProgramPortals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__SearchRewardMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Reward Menu</label>
        <referenceTo>FieloAlpha__Menu__c</referenceTo>
        <relationshipLabel>Program Layouts</relationshipLabel>
        <relationshipName>ProgramLayouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipName>ProgramPortals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Target__c</fullName>
        <formula>IF( FieloAlpha__Default__c , &apos;Default&apos;, IF( ISBLANK(FieloAlpha__Segment__c) || ISNULL(FieloAlpha__Segment__c), &apos;Guest&apos;, FieloAlpha__Segment__r.Name ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__headerBackgroundId__c</fullName>
        <label>headerBackgroundId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Program Layout</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Program Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Layout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>